--- a/.env
+++ b/.env
@@ -34,3 +34,7 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/projet
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://2e26b60bbd76cb:04b016c790a565@smtp.mailtrap.io:2525
+###< symfony/mailer ###
