--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     upload_directory: '%kernel.project_dir%/public/uploads'
+    stripe_public_key: pk_test_SkOlPhzMhFZbdbvozxjiUcQV00EWR0Q2GV
+    stripe_secret_key: sk_test_slLLiq3g14CyTcksAsrHfJl300x94MIOOM
 
 services:
     # default configuration for services in *this* file
