--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stripe/stripe-php": "^7.11",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
+        "symfony/event-dispatcher": "4.3.*",
         "symfony/expression-language": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.3.*",
