--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     upload_directory: '%kernel.project_dir%/public/uploads'
     stripe_public_key: pk_test_SkOlPhzMhFZbdbvozxjiUcQV00EWR0Q2GV
     stripe_secret_key: sk_test_slLLiq3g14CyTcksAsrHfJl300x94MIOOM
+    secure_channel: http
 
 services:
     # default configuration for services in *this* file
