--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "stripe/stripe-php": "^7.11",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
+        "symfony/debug-bundle": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/event-dispatcher": "4.3.*",
         "symfony/expression-language": "4.3.*",
