--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "knplabs/knp-paginator-bundle": "^4.1",
         "sensio/framework-extra-bundle": "^5.1",
         "stripe/stripe-php": "^7.11",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/debug-bundle": "4.3.*",
@@ -20,7 +21,7 @@
         "symfony/http-client": "4.3.*",
         "symfony/intl": "4.3.*",
         "symfony/mailer": "4.3.*",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "*",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
