--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=e776d6e89d0726ca07c9ffe91285c3b7
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
@@ -25,7 +25,7 @@ APP_SECRET=e776d6e89d0726ca07c9ffe91285c3b7
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/projet
+DATABASE_URL=mysql://root:@127.0.0.1:3306/projet1
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
