--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/mailer": "4.3.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "*",
+        "symfony/polyfill-apcu": "^1.13",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer-pack": "*",
