--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/polyfill-apcu": "^1.13",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
+        "symfony/sendgrid-mailer": "4.3.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.3",
         "symfony/translation": "4.3.*",
