--- a/.env
+++ b/.env
@@ -36,10 +36,6 @@ MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 
 ###> symfony/mailer ###
-#MAILER_DSN=smtp://2e26b60bbd76cb:04b016c790a565@smtp.mailtrap.io:2525
+MAILER_DSN=smtp://2e26b60bbd76cb:04b016c790a565@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 
-###> symfony/sendgrid-mailer ###
- SENDGRID_KEY=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
- MAILER_DSN=smtp://$SENDGRID_KEY@sendgrid
-###< symfony/sendgrid-mailer ###
