--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "knplabs/knp-markdown-bundle": "^1.8",
         "knplabs/knp-paginator-bundle": "^4.1",
         "sensio/framework-extra-bundle": "^5.1",
         "stripe/stripe-php": "^7.11",
